<resources>
    <string name="app_name">牛魔网</string>
    <string name="title_search_a">目的地/关键词</string>
    <string name="home_content_a">去哪玩</string>
    <string name="home_content_b">周边游</string>
    <string name="home_content_c">出境游</string>
    <string name="home_content_d">国内游</string>
    <string name="home_content_e">定制游</string>
    <string name="home_content_f">签证</string>
    <string name="home_content_g">包车</string>
    <string name="home_content_h">积分商城</string>
    <string name="home_content_i">热门推荐</string>
    <string name="home_content_j">精品线路推荐</string>
    <string name="travel_content_a">周末游</string>
    <string name="travel_content_b">热门目的地</string>
    <string name="travel_content_c">热卖推荐</string>
    <string name="travel_contnet_d">查询更多线路</string>
    <string name="travel_content_e">定制线路</string>
    <string name="travel_content_f">定制旅游</string>
    <string name="travel_content_g">想要行程更灵活?独立成团欢乐旅行,找旅行定制师来搞定!</string>
    <string name="travel_content_h">定制旅行</string>
    <string name="travel_content_i">游玩日期/天数</string>
    <string name="travel_content_j">特色玩法</string>
    <string name="travel_content_k">出行方式</string>
    <string name="travel_content_l">定制游</string>
    <string name="travel_content_m">立即定制</string>
    <string name="travel_content_n">填写需求</string>
    <string name="travel_content_o">沟通设计行程</string>
    <string name="travel_content_p">快乐出游</string>
    <string name="travel_content_q">签约付款</string>
    <string name="travel_content_r">定制案例</string>
    <string name="travel_content_s">我要包车</string>
    <string name="travel_content_t">包车</string>
    <string name="travel_content_u">常州长城旅游客运公司是常州市车型品种全、车辆档次高、服务质量优、综合接待能力强的实力企业。现拥有各类中高档车辆近200辆，车型齐全。有小型19座、中型37-39座、大型49-53座、商务车等。</string>
    <string name="travel_content_v">服务项目</string>
    <string name="search_a">取消</string>
    <string name="search_b">热门目的地</string>
    <string name="search_c">历史记录</string>
    <string name="search_d">清除</string>
    <string name="search_e">目的地大全</string>
    <string name="search_f">定制线路</string>
    <string name="search_g">团期:</string>
    <string name="search_h">￥</string>
    <string name="search_i">起</string>
    <string name="search_j">推荐排序</string>
    <string name="search_k">游玩方式</string>
    <string name="search_l">行程天数</string>
    <string name="search_m">筛选</string>



    <string name="ship_a">游轮</string>
    <string name="ship_b">我要咨询</string>
    <string name="hotel_a">酒店</string>
    <string name="hotel_b">恐龙主题度假酒店是江苏景尚旅业集团旗下的主题酒店品牌，座落于江苏省常州市环球恐龙城景区，与中华恐龙园、恐龙谷温泉、恐龙城大剧场毗邻而居，是中国首家游憩型商业公园——迪诺水镇的重要组成部分，酒店集宴会、餐饮、主题客房、儿童娱乐、健身休闲等功能于一体，是中国首家游憩型恐龙主题度假酒店。酒店奇幻的艺术氛围和独特的温情服务，将为您带来全新的旅行度假体验。</string>
    <string name="hotel_c">我要预订</string>
    <string name="ticket_a">门票</string>
    <string name="ticket_b">浙西凉缘峡漂流</string>
    <string name="ticket_c">天目湖</string>
    <string name="ticket_d">灵山大佛</string>



    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>


    <string name="route_details_a">韩国首尔一地尊享五日半自助游，韩国首尔一地尊享五日半自助游</string>
    <string name="route_details_b">线路详情</string>

    <string name="pay_content_a">恭喜您，您的订单提交成功！</string>
    <string name="pay_content_b">请保持手机畅通，稍后客户将会联系你， 并确认订单信息。</string>
    <string name="pay_content_c">查看订单</string>
    <string name="pay_content_d">返回首页</string>
    <string name="pay_content_e">完善出游人信息</string>
    <string name="pay_content_f">支付成功</string>
    <string name="pay_content_g">出游日期:</string>
    <string name="pay_content_h">出游人数:</string>
    <string name="pay_content_i">总额:</string>
    <string name="pay_content_j">联系人:</string>
    <string name="pay_content_k">联系电话:</string>
    <string name="pay_content_l">电子邮箱:</string>
    <string name="pay_content_m">下单成功</string>
    <string name="pay_content_n">下单失败，可能有以下问题:</string>
    <string name="pay_content_o">该产品暂时不能下单，请稍后再试。</string>
    <string name="pay_content_p">重新下单</string>
    <string name="pay_content_q">电话咨询</string>
    <string name="pay_content_r">下单失败</string>
    <string name="order_content_a">填写订单</string>
    <string name="order_content_b">联系人信息</string>
    <string name="order_content_c">姓名</string>
    <string name="order_content_d">电话</string>
    <string name="order_content_e">邮箱</string>
    <string name="order_content_f">请输入姓名</string>
    <string name="order_content_g">请输入电话</string>
    <string name="order_content_h">请输入邮箱</string>
    <string name="order_content_i">选择优惠</string>
    <string name="order_content_j">订单总金额</string>
    <string name="order_content_k">提交订单</string>

    <string name="order_content_l">订单支付</string>
    <string name="order_content_m">需支付总金额:</string>
    <string name="order_content_n">多次支付</string>
    <string name="order_content_o">取消</string>
    <string name="order_content_p">请输入每次支付金额</string>
    <string name="order_content_q">确认支付</string>
    <string name="order_content_r">微信支付</string>
    <string name="order_content_s">支付宝支付</string>

    <!--刷新-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>


    <string name="select_date_a">下一步</string>



</resources>
