<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:background="@color/white">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">


    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center"
        android:id="@+id/pay_submit_a"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/pay_content_c"
        android:background="@drawable/home_sixth_content_shape_c"
        android:layout_height="wrap_content" />
    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center"
        android:text="@string/pay_content_d"
        android:id="@+id/pay_submit_b"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="@drawable/home_sixth_content_shape_c"
        android:layout_height="wrap_content" />

</LinearLayout>


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_order_submit"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/pay_content_e"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_sixth_content_shape"/>
    </LinearLayout>

</LinearLayout>
