<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:id="@+id/ln_searchresult_a"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_searchresult_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_j"
            android:textColor="@color/dark_3" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="@color/backgroundcolor"/>

    <LinearLayout
        android:id="@+id/ln_searchresult_b"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_searchresult_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_k"
            android:textColor="@color/dark_3" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="@color/backgroundcolor"/>
    <LinearLayout
        android:id="@+id/ln_searchresult_c"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_searchresult_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_l"
            android:textColor="@color/dark_3" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="@color/backgroundcolor"/>

    <LinearLayout
        android:id="@+id/ln_searchresult_d"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_searchresult_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_m"
            android:textColor="@color/dark_3" />
    </LinearLayout>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundcolor"
        android:alpha="0.8"/>

</LinearLayout>
