<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/home_second_view_height">

    <LinearLayout
        android:background="@color/white"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:orientation="vertical">
        <!--去哪玩-->
        <LinearLayout
            android:id="@+id/ll_item_layout_a"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/home_second_left_shape"
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_horizontal">
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_content_a"
                android:textColor="@color/white"
                android:textSize="12sp"/>

        </LinearLayout>

            <!--签证-->
            <LinearLayout
                android:id="@+id/ll_item_layout_b"
                android:background="@drawable/home_second_bottomleft_shape"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_content_f"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:orientation="vertical">

            <!--周边游-->
                <LinearLayout
                    android:id="@+id/ll_item_layout_c"
                    android:background="@color/title_orange"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_content_b"/>
                </LinearLayout>

            <!--出境游-->
            <LinearLayout
                android:id="@+id/ll_item_layout_d"
                android:background="@color/title_orange"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_content_c"/>
            </LinearLayout>

            <!--包车-->
            <LinearLayout
                android:id="@+id/ll_item_layout_e"
                android:background="@color/item_chengse"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="2dp"

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_content_g"/>
            </LinearLayout>


        </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="150dp"
                android:orientation="vertical">
                <!--国内游-->
                <LinearLayout
                    android:id="@+id/ll_item_layout_f"
                    android:background="@drawable/home_second_right_shape"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_content_d"/>
                </LinearLayout>
                <!--定制游-->
                <LinearLayout
                    android:id="@+id/ll_item_layout_g"
                    android:background="@color/title_orange"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_content_e"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_item_layout_h"
                    android:background="@drawable/home_second_bottomright_shape"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_content_h"/>
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>


</LinearLayout>
