<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/travel_title_bar">

    <include layout="@layout/activity_travel_titlebar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/travel_title_bar">

        <!--周边游-->
        <RelativeLayout
            android:id="@+id/rl_travel_a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">
            <TextView
                android:textSize="14sp"
                android:layout_centerInParent="true"
                android:id="@+id/travel_content_a"
                android:textColor="@color/dark_3"
                android:text="@string/home_content_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>

        <!--国内游-->
        <RelativeLayout
            android:id="@+id/rl_travel_b"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">
            <TextView
                android:textSize="14sp"
                android:id="@+id/travel_content_b"
                android:textColor="@color/dark_3"
                android:text="@string/home_content_d"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>
        <!--出境游-->
        <RelativeLayout
            android:id="@+id/rl_travel_c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">
            <TextView
                android:textSize="14sp"
                android:id="@+id/travel_content_c"
                android:textColor="@color/dark_3"
                android:text="@string/home_content_c"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>

        <!--周末游-->
        <RelativeLayout
            android:id="@+id/rl_travel_d"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">
            <TextView
                android:textSize="14sp"
                android:layout_centerInParent="true"
                android:id="@+id/travel_content_d"
                android:textColor="@color/dark_3"
                android:text="@string/travel_content_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/cursoraa"
        android:layout_width="80dp"
        android:layout_height="5dp"
        android:background="@color/title_orange"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpagera"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />


</LinearLayout>
